Add bart-base-pubmed model

--- a/bart-base-pubmed/bart_base_pubmed_summary_final.ipynb
+++ b/bart-base-pubmed/bart_base_pubmed_summary_final.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "MOsHUjgdIrIW",
         "colab": {
@@ -178,7 +178,7 @@
         },
         "outputId": "8456c479-a500-45ba-8cad-9a18e4df307f"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,7 +215,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "9weGF83Sir6z",
         "colab": {
@@ -276,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "FNO0eWs7ir6z",
         "colab": {
@@ -326,7 +326,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "3y-w6Uyhir60",
         "colab": {
@@ -382,7 +382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "voXBC93bir61"
       },
@@ -397,7 +397,7 @@
         "id": "4RRkXuteIrIh"
       },
       "source": [
-        "This notebook is built to run  with any model checkpoint from the [Model Hub](https://huggingface.co/models) as long as that model has a sequence-to-sequence version in the Transformers library. Here we picked the [`facebook/bart-large-xsum`](https://huggingface.co/facebook/bart-large-xsum) checkpoint. "
+        "This notebook is built to run  with any model checkpoint from the [Model Hub](https://huggingface.co/models) as long as that model has a sequence-to-sequence version in the Transformers library. Here we picked the [`facebook/bart-base`](https://huggingface.co/facebook/bart-base?text=World+War+II+or+the+Second+World+War%2C+often+abbreviated+as+WWII+or+WW2%2C+was+a+global+war+that+lasted+from+1939+to+1945.+It+involved+the+vast+majority+of+the+world%27s+countries%E2%80%94including+all+of+the+great+powers%E2%80%94forming+two+opposing+military+alliances%3A+the+Allies+and+the+Axis+powers.+In+a+total+war+directly+involving+more+than+100+million+personnel+from+more+than+30+countries%2C+the+major+participants+threw+their+entire+economic%2C+industrial%2C+and+scientific+capabilities+behind+the+war+effort%2C+blurring+the+distinction+between+civilian+and+military+resources.+Aircraft+played+a+major+role+in+the+conflict%2C+enabling+the+strategic+bombing+of+population+centres+and+the+only+two+uses+of+nuclear+weapons+in+war.+World+War+II+was+by+far+the+deadliest+conflict+in+human+history%3B+it+resulted+in+70+to+85+million+fatalities%2C+a+majority+being+civilians.+Tens+of+millions+of+people+died+due+to+genocides+%28including+the+Holocaust%29%2C+starvation%2C+massacres%2C+and+disease.+In+the+wake+of+the+Axis+defeat%2C+Germany+and+Japan+were+occupied%2C+and+war+crimes+tribunals+were+conducted+against+German+and+Japanese+leaders.) checkpoint. "
       ]
     },
     {
@@ -420,7 +420,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "IreSlFmlIrIm",
         "colab": {
@@ -697,7 +697,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "GWiVUF0jIrIv",
         "colab": {
@@ -745,7 +745,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "X6HrpprwIrIz",
         "colab": {
@@ -789,7 +789,7 @@
       "metadata": {
         "id": "88RJWRuylqjh"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -803,7 +803,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "i3j8APAoIrI3"
       },
@@ -832,7 +832,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "SZy5tRB_IrI7",
         "colab": {
@@ -905,7 +905,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "5o4rUteaIrI_",
         "colab": {
@@ -973,7 +973,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "6XN1Rq0aIrJC",
         "colab": {
@@ -1029,7 +1029,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "eXNLu_-nIrJI",
         "colab": {
@@ -1168,7 +1168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "a5hBlsrHIrJL",
         "colab": {
@@ -1205,7 +1205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "b2EnCbkBir66",
         "colab": {
@@ -1240,7 +1240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "m4JRmJxFir67",
         "colab": {
@@ -1273,7 +1273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "DAQBW23yir67"
       },
@@ -1293,12 +1293,12 @@
       "source": [
         "We can then write the function that will preprocess our samples. We just feed them to the `tokenizer` with the argument `truncation=True`. This will ensure that an input longer that what the model selected can handle will be truncated to the maximum length accepted by the model. The padding will be dealt with later on (in a data collator) so we pad examples to the longest length in the batch and not the whole dataset.\n",
         "\n",
-        "The max input length of `facebook/bart-large-xsum` is 1024, so `max_input_length = 1024`."
+        "The max input length of `facebook/bart-base` is 1024, so `max_input_length = 1024`."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "vc0BSBLIIrJQ"
       },
@@ -1330,7 +1330,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "-b70jh26IrJS",
         "colab": {
@@ -1365,7 +1365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "DDtsaJeVIrJT",
         "colab": {
@@ -1488,7 +1488,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "TlqNaB8jIrJW",
         "colab": {
@@ -1552,7 +1552,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "phpGhdw_ir69"
       },
@@ -1592,7 +1592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "2QUAqk8Lir6-"
       },
@@ -1612,7 +1612,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "UmvbnJ9JIrJd"
       },
@@ -1654,7 +1654,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "imY1oC3SIrJf",
         "colab": {
@@ -1695,7 +1695,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "uNx5pyRlIrJh",
         "scrolled": false,
@@ -2101,7 +2101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "jj7tm3Hvir6_",
         "colab": {
